fix some issues in meeting 1

--- a/conversion-rate-optimisation.html
+++ b/conversion-rate-optimisation.html
@@ -546,7 +546,7 @@
                             <tr class="head-table-two">
                                 <td class="empty">&nbsp;</td>
                                 <td>2000<br>Per month + VAT</td>
-                                <td>1500<br>Per month + VAT</td>
+                                <td>3000<br>Per month + VAT</td>
                                 <td>6000<br>Per month + VAT</td>
                                 <td>10000<br>Per month + VAT</td>
                             </tr>
@@ -696,7 +696,7 @@
                                 <h1 class="m-0">Advanced</h1>
                             </div>
                             <div class="card-body">
-                                <h1>1500</h1>
+                                <h1>3000</h1>
                                 <h6>Per Month + VAT</h6>
                                 <button class="btn package-view-details-btn">View Details</button>
                             </div>
@@ -770,11 +770,14 @@
               </div>
               <div class="col-12 col-sm-6 col-lg-3 mt-3">
                  <div>
-                    <p class="footer-sub-heading">LONDON OFFICE</p>
+                    <p class="footer-sub-heading">Blogs</p>
                     <ul class="footer-ul">
-                       <li><a href="#">Phone: +971 54 351 2089 </a></li>
-                       <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
-                       <li><a href="#">info@sahaa.me</a></li>
+                       <li><a href="./pay-per-click-blog.html">Pay Per Click</a></li>
+                       <li><a href="./ecommerce-SEO-services-blog.html">Ecommerece SEO</a></li>
+                       <li><a href="./social-media-marketing-blog.html">Social Media Marketing</a></li>
+                       <li><a href="./Facebook-marketing-expert-blog.html">Facebook Marketing</a></li>
+                       <li><a href="Digital-marketing-agencies-blog.html">Digital Marketing</a></li>
+                       <li><a href="./Search-engine-optimization-blog.html">How SEO Work</a></li>
                     </ul>
                  </div>
               </div>
