--- a/wordpress-seo.html
+++ b/wordpress-seo.html
@@ -514,7 +514,7 @@
                         <tr class="head-table-two">
                            <td class="empty">&nbsp;</td>
                            <td>2000<br>Per month + VAT</td>
-                           <td>1500<br>Per month + VAT</td>
+                           <td>3000<br>Per month + VAT</td>
                            <td>6000<br>Per month + VAT</td>
                            <td>10000<br>Per month + VAT</td>
                         </tr>
@@ -662,7 +662,7 @@
                            <h1 class="m-0">Advanced</h1>
                         </div>
                         <div class="card-body">
-                           <h1>1500</h1>
+                           <h1>3000</h1>
                            <h6>Per Month + VAT</h6>
                            <button class="btn package-view-details-btn">View Details</button>
                         </div>
@@ -706,45 +706,48 @@
                   <div>
                      <img src="assets/images/new/SM Light@2x.png" class="img-fluid">
                      <ul class="footer-ul">
-                     <li><a href="index.html">Home</a></li>
-                     <li><a href="meet-the-team.html">Who We Are</a></li>
-                     <li><a href="what-we-do.html">What We Do</a></li>
-                     <li><a href="blogs.html">Blog</a></li>
-                     <li><a href="case-study.html">Case Studies</a></li>
-                     <li><a href="date-time.html">Contact Us</a></li>
-                  </ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="meet-the-team.html">Who We Are</a></li>
+                        <li><a href="what-we-do.html">What We Do</a></li>
+                        <li><a href="blogs.html">Blog</a></li>
+                        <li><a href="case-study.html">Case Studies</a></li>
+                        <li><a href="date-time.html">Contact Us</a></li>
+                     </ul>
                   </div>
                </div>
                <div class="col-12 col-sm-6 col-lg-3 mt-3">
                   <div>
                      <p class="footer-sub-heading">WHAT WE DO</p>
                      <ul class="footer-ul">
-                     <li><a href="facebook-advertising.html">Facebook Advertising</a></li>
-                     <li><a href="instagram-advertising.html">Instagram Advertising</a></li>
-                     <li><a href="search-engine-optimisation.html">SEO</a></li>
-                     <li><a href="email-marketing.html">Email Marketing</a></li>
-                     <li><a href="google-advertising-agency.html">Google Advertising</a></li>
-                     <li><a href="social-media-management-services.html">Social Media Management</a></li>
-                     <li><a href="ecommerce-seo.html">eCommerce Agency</a></li>
-                     <li><a href="digital-strategy.html">Digital Strategy</a></li>
-                     <li><a href="content-marketing.html">Content Marketing</a></li>
-                     <li><a href="shopify-development-agency.html">Shopify Development</a></li>
-                  </ul>
-                  </div>
-               </div>
-               <div class="col-12 col-sm-6 col-lg-3 mt-3">
-                  <div>
-                     <p class="footer-sub-heading">LONDON OFFICE</p>
-                     <ul class="footer-ul">
-                        <li><a href="#">Phone: +971 54 351 2089 </a></li>
-                        <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
-                        <li><a href="#">info@sahaa.me</a></li>
+                        <li><a href="facebook-advertising.html">Facebook Advertising</a></li>
+                        <li><a href="instagram-advertising.html">Instagram Advertising</a></li>
+                        <li><a href="search-engine-optimisation.html">SEO</a></li>
+                        <li><a href="email-marketing.html">Email Marketing</a></li>
+                        <li><a href="google-advertising-agency.html">Google Advertising</a></li>
+                        <li><a href="social-media-management-services.html">Social Media Management</a></li>
+                        <li><a href="ecommerce-seo.html">eCommerce Agency</a></li>
+                        <li><a href="digital-strategy.html">Digital Strategy</a></li>
+                        <li><a href="content-marketing.html">Content Marketing</a></li>
+                        <li><a href="shopify-development-agency.html">Shopify Development</a></li>
                      </ul>
                   </div>
                </div>
                <div class="col-12 col-sm-6 col-lg-3 mt-3">
                   <div>
-                     <p class="footer-sub-heading">LONDON OFFICE</p>
+                     <p class="footer-sub-heading">Blogs</p>
+                     <ul class="footer-ul">
+                        <li><a href="./pay-per-click-blog.html">Pay Per Click</a></li>
+                        <li><a href="./ecommerce-SEO-services-blog.html">Ecommerece SEO</a></li>
+                        <li><a href="./social-media-marketing-blog.html">Social Media Marketing</a></li>
+                        <li><a href="./Facebook-marketing-expert-blog.html">Facebook Marketing</a></li>
+                        <li><a href="Digital-marketing-agencies-blog.html">Digital Marketing</a></li>
+                        <li><a href="./Search-engine-optimization-blog.html">How SEO Work</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                  <div>
+                     <p class="footer-sub-heading">DUBAI OFFICE</p>
                      <ul class="footer-ul">
                         <li><a href="#">Phone: +971 54 351 2089 </a></li>
                         <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
@@ -754,17 +757,17 @@
                </div>
             </div>
             <hr class="mt-5 mb-3">
-            <div class="row bottom-row mt-5">
+            <div class="row bottom-row mt-5 align-items-center">
                <div class="col-md-8">
                   <p class="">Disclaimer: The opinions expressed within Reviews are those of the author and not the views or opinions of Sahaa Limited. Registered Office: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai. © Sahaa Marketing LLC FZ 2022. All rights reserved. Sahaa & Sahaa Pages and other ™ are trademarks of Sahaa Marketing LLC FZ.</p>
                </div>
                <div class="col-md-4">
                   <div class="text-start text-md-center d-flex">
-                  <a href="https://twitter.com/Sahaa_me2022" class="icon-span"><i class="fa fa-twitter"></i></a>
-                  <a href="https://www.facebook.com/Sahaa.me.uae/?ref=pages_you_manage%5C" class="icon-span"><i class="fa fa-facebook-f"></i></a>
-                  <a href="https://www.instagram.com/sahaa.me/" class="icon-span"><i class="fa fa-instagram"></i></a>
-                  <a href="https://www.pinterest.com/business/hub/" class="icon-span"><i class="fa fa-pinterest"></i></a>
-               </div>
+                     <a href="https://twitter.com/Sahaa_me2022" class="icon-span"><i class="fa fa-twitter"></i></a>
+                     <a href="https://www.facebook.com/Sahaa.me.uae/?ref=pages_you_manage%5C" class="icon-span"><i class="fa fa-facebook-f"></i></a>
+                     <a href="https://www.instagram.com/sahaa.me/" class="icon-span"><i class="fa fa-instagram"></i></a>
+                     <a href="https://www.pinterest.com/business/hub/" class="icon-span"><i class="fa fa-pinterest"></i></a>
+                  </div>
                </div>
             </div>
          </div>
