--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
          <div class="row cards-row mt-5">
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
-                  <img src="assets/images/Group 196.png" class="img-fluid">
+                  <img src="assets/images/new//Projects/Projects - Branding - DubaiScop.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>Generated €70,000 in monthly revenue from facebook</h5>
@@ -298,7 +298,7 @@
             </div>
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
-                  <img src="assets/images/Group 199.png" class="img-fluid">
+                  <img src="assets/images/new/Projects/Projects - Branding - Mutasil.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>Generated €70,000 in monthly revenue from facebook</h5>
@@ -307,7 +307,7 @@
             </div>
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
-                  <img src="assets/images/Group 200.png" class="img-fluid">
+                  <img src="assets/images/new/Projects/Projects - Cygnus.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>Generated €70,000 in monthly revenue from facebook</h5>
@@ -316,7 +316,7 @@
             </div>
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
-                  <img src="assets/images/Group 378.png" class="img-fluid">
+                  <img src="assets/images/new/Projects/Projects - Elite Hub.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>Generated €70,000 in monthly revenue from facebook</h5>
@@ -329,7 +329,7 @@
             </div>
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
-                  <img src="assets/images/Group 380.png" class="img-fluid">
+                  <img src="assets/images/new/Projects/Projects - Hamnet.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>Generated €70,000 in monthly revenue from facebook</h5>
@@ -338,7 +338,7 @@
             </div>
             <div class="col-sm-6 col-md-4 text-center mt-2">
                <div class="case-card">
-                  <img src="assets/images/Group 383.png" class="img-fluid">
+                  <img src="assets/images/new/Projects/Projects - Mobile App UI .jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
                      <h5>Generated €70,000 in monthly revenue from facebook</h5>
@@ -737,7 +737,7 @@
                <h6 class="section-small-h6">PRICING</h6>
                <h1 class="section-h45 mt-5">Packages to suit small businesses </h1>
                <div class="mt-4">
-                  <p class="global-p">The Good Marketer has taken the mystery out of agency fees with our clear
+                  <p class="global-p">The Sahaa Marketer has taken the mystery out of agency fees with our clear
                      breakdowns and purpose-built packages to suit all businesses. Our packages cover all of our
                      services from Social Media Advertising to SEO. If you’d like to find out which package is best
                      suited to your requirements or you want something a little more flexible, simply book a call.</p>
@@ -759,7 +759,7 @@
                   <tr class="head-table-two">
                      <td class="empty">&nbsp;</td>
                      <td>2000<br>Per month + VAT</td>
-                     <td>1500<br>Per month + VAT</td>
+                     <td>3000<br>Per month + VAT</td>
                      <td>6000<br>Per month + VAT</td>
                      <td>10000<br>Per month + VAT</td>
                   </tr>
@@ -908,7 +908,7 @@
                      <h1 class="m-0">Advanced</h1>
                   </div>
                   <div class="card-body">
-                     <h1>1500</h1>
+                     <h1>3000</h1>
                      <h6>Per Month + VAT</h6>
                      <button class="btn package-view-details-btn">View Details</button>
                   </div>
@@ -958,7 +958,7 @@
                   <div class="carousel-item active">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">1.	I had a great experience working with this digital marketing agency! They were able to increase my website's traffic significantly.
+                        <p class="mt-3">I had a great experience working with this digital marketing agency! They were able to increase my website's traffic significantly.
                         </p>
                         <h6 class="bottom-heading mt-4">Donald</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -967,7 +967,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">2.	This digital marketing agency is extremely knowledgeable in their field and were able to help me achieve my marketing goals.
+                        <p class="mt-3">This digital marketing agency is extremely knowledgeable in their field and were able to help me achieve my marketing goals.
                         </p>
                         <h6 class="bottom-heading mt-4">Mark</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -976,7 +976,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">4.	I am so happy with the results I've seen from working with sahaa digital marketing agency. They are true experts in their field.
+                        <p class="mt-3">I am so happy with the results I've seen from working with sahaa digital marketing agency. They are true experts in their field.
                         </p>
                         <h6 class="bottom-heading mt-4">Kevin</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -985,7 +985,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">5.	I would definitely recommend this digital marketing agency to anyone looking for help with their marketing efforts. They are the best in the business!
+                        <p class="mt-3">I would definitely recommend this digital marketing agency to anyone looking for help with their marketing efforts. They are the best in the business!
                         </p>
                         <h6 class="bottom-heading mt-4">Herry</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -994,7 +994,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">6.	I have had nothing but positive experiences working with this digital marketing agency. They are true professionals and know exactly what they're doing.
+                        <p class="mt-3">I have had nothing but positive experiences working with this digital marketing agency. They are true professionals and know exactly what they're doing.
                         </p>
                         <h6 class="bottom-heading mt-4">Broke</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -1003,7 +1003,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">7.	Sahaa marketer is the best website, I have ever used for my business. It has helped me increase my sales and conversion rate. The support team is always available to help and answer any questions I have.</p>
+                        <p class="mt-3">Sahaa marketer is the best website, I have ever used for my business. It has helped me increase my sales and conversion rate. The support team is always available to help and answer any questions I have.</p>
                         <h6 class="bottom-heading mt-4">Jenny</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
                      </div>
@@ -1011,7 +1011,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">8. Sahaa marketer is very user-friendly. I was able to set it up in minutes and start using it right away. I highly recommend it to anyone looking for an effective marketing agency.
+                        <p class="mt-3">Sahaa marketer is very user-friendly. I was able to set it up in minutes and start using it right away. I highly recommend it to anyone looking for an effective marketing agency.
                         </p>
                         <h6 class="bottom-heading mt-4">Robert</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -1020,7 +1020,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">9.	Sahaa marketer is amazing! It has helped me grow my business by leaps and bounds. I can't recommend it enough!
+                        <p class="mt-3">Sahaa marketer is amazing! It has helped me grow my business by leaps and bounds. I can't recommend it enough!
                         </p>
                         <h6 class="bottom-heading mt-4">David</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -1029,7 +1029,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">10.	Sahaa marketer is the best marketing website I have ever used. It is easy to use and has helped me increase my sales and conversion rate. I would highly recommend it to anyone looking for an effective marketing agency.
+                        <p class="mt-3">Sahaa marketer is the best marketing website I have ever used. It is easy to use and has helped me increase my sales and conversion rate. I would highly recommend it to anyone looking for an effective marketing agency.
                         </p>
                         <h6 class="bottom-heading mt-4">Richard</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -1038,7 +1038,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">11.	Sahaa marketer is fantastic! It has helped me increase my traffic and conversion rate. I highly recommend it to anyone looking for an effective marketing agency.
+                        <p class="mt-3">Sahaa marketer is fantastic! It has helped me increase my traffic and conversion rate. I highly recommend it to anyone looking for an effective marketing agency.
                         </p>
                         <h6 class="bottom-heading mt-4">Thomas</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -1047,7 +1047,7 @@
                   <div class="carousel-item">
                      <div class="carosal-text">
                         <!-- <h1 class="section-h45">Facebook Advertising</h1> -->
-                        <p class="mt-3">12.	Sahaa marketer is the best thing since sliced bread! It has helped me increase my traffic and conversion rate. I would highly recommend it to anyone looking for an effective marketing agency.
+                        <p class="mt-3">Sahaa marketer is the best thing since sliced bread! It has helped me increase my traffic and conversion rate. I would highly recommend it to anyone looking for an effective marketing agency.
                         </p>
                         <h6 class="bottom-heading mt-4">Daniel</h6>
                         <!-- <h6 class="bottom-heading color">Nancy Florance Asthetics</h6> -->
@@ -1407,11 +1407,14 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-3 mt-3">
                <div>
-                  <p class="footer-sub-heading">LONDON OFFICE</p>
+                  <p class="footer-sub-heading">Blogs</p>
                   <ul class="footer-ul">
-                     <li><a href="#">Phone: +971 54 351 2089 </a></li>
-                     <li><a href="#">Address: Business Center 1, M Floor, The Meydan Hotel, Nad Al Sheba, Dubai, U.A.E. Registered in Dubai.</a></li>
-                     <li><a href="#">info@sahaa.me</a></li>
+                     <li><a href="./pay-per-click-blog.html">Pay Per Click</a></li>
+                     <li><a href="./ecommerce-SEO-services-blog.html">Ecommerece SEO</a></li>
+                     <li><a href="./social-media-marketing-blog.html">Social Media Marketing</a></li>
+                     <li><a href="./Facebook-marketing-expert-blog.html">Facebook Marketing</a></li>
+                     <li><a href="Digital-marketing-agencies-blog.html">Digital Marketing</a></li>
+                     <li><a href="./Search-engine-optimization-blog.html">How SEO Work</a></li>
                   </ul>
                </div>
             </div>
