change our client logo

--- a/index.html
+++ b/index.html
@@ -1214,13 +1214,13 @@
                      <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                           1. What is sahaa marketer?
+                           Can I work with Sahaa Marketer?
                         </button>
                      </h2>
                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                           <p class="global-p">Sahaa marketer is a marketing automation tool that enables businesses to create, manage, and execute marketing campaigns
+                           <p class="global-p">Just because we’re a digital marketing agency in Dubai, it doesn’t mean we can’t help your business wherever you are in the UAE and wherever your audience is in the world. We run campaigns at all levels and thoroughly understand the needs and challenges of running a small business! Our experience across a broad spectrum of digital marketing platforms means we have the expertise and the know-how to do the job.
                            </p>
                         </div>
                      </div>
@@ -1229,13 +1229,14 @@
                      <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                           2. What are the benefits of sahaa marketer?
+                           How Long Has Sahaa Marketer Been An Agency?
                         </button>
                      </h2>
                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                           <p class="global-p">Some of the benefits of sahaa marketer include increased leads, improved conversion rates, and increased ROI.
+                           <p class="global-p">The Good Marketer was founded in 2020 with a very clear mission and even clearer values. Although we might not have been around in the industry for as long as some of our competitors, we actually think that is a good thing. We’re open to new ideas and have invested in our experienced talent in order to provide the best service for all our clients. To get a better idea about this, read our reviews as they speak for themselves!
+
                            </p>
                         </div>
                      </div>
@@ -1244,13 +1245,13 @@
                      <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                           3. What type of businesses can use sahaa marketer?
+                           What Makes Us Different From Other Digital Marketing Agencies in Dubai?
                         </button>
                      </h2>
                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                           <p class="global-p">Sahaa marketer is suitable for businesses of all sizes.
+                           <p class="global-p">Our core values make us different. We’re not afraid to embed ourselves into your team, get under the skin of your business, seek out business challenges and provide positive results that make a real impact on your bottom line. We pride ourselves on being your business’s biggest champions because we’re passionate about working with SMEs.
                            </p>
                         </div>
                      </div>
@@ -1259,13 +1260,13 @@
                      <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                           4. How does sahaa marketer work?
+                           How Long Is A Partnership Term?
                         </button>
                      </h2>
                      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                           <p>Sahaa marketer integrates with a businesses email marketing system to create and send marketing campaigns.
+                           <p>We set our terms as 3 or 6 months, so we have enough time to deliver the results and execute the bespoke plan we put together for you. However, our clients have been with us for several years because of our proactive and personable approach. Long-term relationships lead to the best successes as we seek business challenges and solutions.
                            </p>
                         </div>
                      </div>
@@ -1274,93 +1275,14 @@
                      <h2 class="accordion-header" id="headingFive">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                           5. What are the features of sahaa marketer?
+                           I’m Not Sure Which Channels To Get Started With – Can You Help?
                         </button>
                      </h2>
                      <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                           <p>Some of the features of sahaa marketer include email marketing, lead capture, landing pages, and automated marketing.
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingSix">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                           data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                           6. What is a digital marketing agency?
-                        </button>
-                     </h2>
-                     <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                           <p>
-                              A digital marketing agency is a company that provides digital marketing services to clients. These services can include SEO, social media marketing, PPC, and website design and development.
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingSeven">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                           data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                           7. What services does a digital marketing agency offer?
-                        </button>
-                     </h2>
-                     <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                           <p>
-                              A digital marketing agency typically offers a wide range of services, including SEO, social media marketing, PPC, and website design and development.
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingEight">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                           data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                           8. What is the cost of working with a digital marketing agency?
-                        </button>
-                     </h2>
-                     <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                           <p>
-                              The cost of working with a digital marketing agency will vary depending on the services you require. Typically, the cost will be based on a project basis or on a monthly retainer.
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingNine">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                           data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-                           9. What is the difference between a digital marketing agency and a digital marketing consultant?
-                        </button>
-                     </h2>
-                     <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                           <p>
-                              A digital marketing agency is a company that provides digital marketing services to clients. A digital marketing consultant is a freelance individual who provides digital marketing advice and services to clients on a project basis.
-                           </p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="accordion-item">
-                     <h2 class="accordion-header" id="headingTen">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                           data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-                           10. What should I look for when choosing a digital marketing agency?
-                        </button>
-                     </h2>
-                     <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                           <p>
-                              When choosing a digital marketing agency, you should consider the agency's experience, the services they offer, and their pricing. You should also make sure that the agency is a registered business
+                           <p>Absolutely! Whether you know exactly where you need to fill in the gaps or if you need a complete overhaul, we can help.
+                              Here at Sahaa Marketer, we appreciate that you might not have the resources to invest in all channels immediately. We can create a Digital strategy that is bespoke for your brand and in line with KPIs that we agree on together. This document will outline a strategic plan of the work, tests, and optimizations we will do each month and will also highlight when we expect to introduce new channels and capitalize on bigger opportunities. Book a call to outline what you’re looking to achieve and find out more!
                            </p>
                         </div>
                      </div>
