--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -501,42 +501,42 @@
                   <div class="owl-carousel team-owl-carousel">
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Balance 1.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/Astrazenica.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Business Idea.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/Crown Plaza.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Cygnus.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/FHC Group.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Elite Hub.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/Kafa Properties.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Fort Realtity.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/Legal General.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Hamnet Logo.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/Travis Perkins.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/Homes Finder.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/FHC Group.png" class="carousel-img">
                         </div>
                      </div>
                      <div class="item">
                         <div class="carosal-item text-center">
-                           <img src="assets/images/new/clients/MIVA.png" class="carousel-img">
+                           <img src="assets/images/new/Clients-Logos/Kafa Properties.png" class="carousel-img">
                         </div>
                      </div>
                   </div>
