change case studies

--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -359,51 +359,51 @@
                </div>
                <div class="row social-cards-row mt-5">
                   <div class="col-md-4">
-                     <div class="flip-card">
-                        <div class="flip-card-inner">
-                           <div class="flip-card-front main-black">
+                      <div class="flip-card">
+                          <div class="flip-card-inner">
+                            <div class="flip-card-front main-black">
                               <div class="front-text-box">
-                                 <img src="assets/images/Loom-300x232.webp" class="front-img img-fluid">
-                                 <h3 class="mt-4 px-3">175% INCREASE IN OVERALL REVENUE GENERATED</h3>
+                                  <img src="assets/images/new/Clients-Logos/Astrazenica.png" class="front-img img-fluid">
+                                  <h3 class="mt-4 px-3">GENERATE AN AVERAGE FB|IG ROAS OF 21.12</h3>
                               </div>
-                           </div>
-                           <div class="flip-card-back d-flex align-items-center justify-content-center main-black">
+                            </div>
+                            <div class="flip-card-back d-flex align-items-center justify-content-center main-black">
                               <h1><a href="#">View Case Study</a></h1>
-                           </div>
+                            </div>
+                          </div>
                         </div>
-                     </div>
                   </div>
                   <div class="col-md-4">
-                     <div class="flip-card">
-                        <div class="flip-card-inner">
-                           <div class="flip-card-front main-redOne">
+                      <div class="flip-card">
+                          <div class="flip-card-inner">
+                            <div class="flip-card-front main-redOne">
                               <div class="front-text-box">
-                                 <img src="assets/images/Loom-300x232.webp" class="front-img img-fluid">
-                                 <h3 class="mt-4 px-3">175% INCREASE IN OVERALL REVENUE GENERATED</h3>
+                                  <img src="assets/images/new/Clients-Logos/Crown Plaza.png" class="front-img img-fluid">
+                                  <h3 class="mt-4 px-3">ACHIEVED A 3.31 FACEBOOK ROAS POST-IOS14</h3>
                               </div>
-                           </div>
-                           <div class="flip-card-back d-flex align-items-center justify-content-center main-redOne">
+                            </div>
+                            <div class="flip-card-back d-flex align-items-center justify-content-center main-redOne">
                               <h1><a href="#">View Case Study</a></h1>
-                           </div>
+                            </div>
+                          </div>
                         </div>
-                     </div>
                   </div>
                   <div class="col-md-4">
-                     <div class="flip-card">
-                        <div class="flip-card-inner">
-                           <div class="flip-card-front main-black">
+                      <div class="flip-card">
+                          <div class="flip-card-inner">
+                            <div class="flip-card-front main-black">
                               <div class="front-text-box">
-                                 <img src="assets/images/Loom-300x232.webp" class="front-img img-fluid">
-                                 <h3 class="mt-4 px-3">175% INCREASE IN OVERALL REVENUE GENERATED</h3>
+                                  <img src="assets/images/new/Clients-Logos/FHC Group.png" class="front-img img-fluid">
+                                  <h3 class="mt-4 px-3">2900% INCREASE IN MONTHLY SHOPIFY REVENU</h3>
                               </div>
-                           </div>
-                           <div class="flip-card-back d-flex align-items-center justify-content-center main-black">
+                            </div>
+                            <div class="flip-card-back d-flex align-items-center justify-content-center main-black">
                               <h1><a href="#">View Case Study</a></h1>
-                           </div>
+                            </div>
+                          </div>
                         </div>
-                     </div>
                   </div>
-               </div>
+              </div>
             </div>
          </section>
          <!-- social media case study section end -->
