--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -202,8 +202,8 @@
                             <div class="flip-card-inner">
                               <div class="flip-card-front main-black">
                                 <div class="front-text-box">
-                                    <img src="assets/images/Loom-300x232.webp" class="front-img img-fluid">
-                                    <h3 class="mt-4 px-3">175% INCREASE IN OVERALL REVENUE GENERATED</h3>
+                                    <img src="assets/images/new/Clients-Logos/Astrazenica.png" class="front-img img-fluid">
+                                    <h3 class="mt-4 px-3">GENERATE AN AVERAGE FB|IG ROAS OF 21.12</h3>
                                 </div>
                               </div>
                               <div class="flip-card-back d-flex align-items-center justify-content-center main-black">
@@ -217,8 +217,8 @@
                             <div class="flip-card-inner">
                               <div class="flip-card-front main-redOne">
                                 <div class="front-text-box">
-                                    <img src="assets/images/Loom-300x232.webp" class="front-img img-fluid">
-                                    <h3 class="mt-4 px-3">175% INCREASE IN OVERALL REVENUE GENERATED</h3>
+                                    <img src="assets/images/new/Clients-Logos/Crown Plaza.png" class="front-img img-fluid">
+                                    <h3 class="mt-4 px-3">ACHIEVED A 3.31 FACEBOOK ROAS POST-IOS14</h3>
                                 </div>
                               </div>
                               <div class="flip-card-back d-flex align-items-center justify-content-center main-redOne">
@@ -232,8 +232,8 @@
                             <div class="flip-card-inner">
                               <div class="flip-card-front main-black">
                                 <div class="front-text-box">
-                                    <img src="assets/images/Loom-300x232.webp" class="front-img img-fluid">
-                                    <h3 class="mt-4 px-3">175% INCREASE IN OVERALL REVENUE GENERATED</h3>
+                                    <img src="assets/images/new/Clients-Logos/FHC Group.png" class="front-img img-fluid">
+                                    <h3 class="mt-4 px-3">2900% INCREASE IN MONTHLY SHOPIFY REVENU</h3>
                                 </div>
                               </div>
                               <div class="flip-card-back d-flex align-items-center justify-content-center main-black">
