add pages images

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                   <img src="assets/images/new//Projects/Projects - Branding - DubaiScop.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
-                     <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     <h5>GENERATED 70K IN MONTHLY REVENUE FROM FACEBOOK</h5>
                   </div>
                </div>
             </div>
@@ -301,7 +301,7 @@
                   <img src="assets/images/new/Projects/Projects - Branding - Mutasil.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
-                     <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     <h5>GENERATED AN AVERAGE FACEBOOK ROAS  OF 3.51 IN SIX MONTHS</h5>
                   </div>
                </div>
             </div>
@@ -310,7 +310,7 @@
                   <img src="assets/images/new/Projects/Projects - Cygnus.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
-                     <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     <h5>150K REVENUE GENERATED FROM FACEBOOK ADS</h5>
                   </div>
                </div>
             </div>
@@ -319,7 +319,7 @@
                   <img src="assets/images/new/Projects/Projects - Elite Hub.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
-                     <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     <h5>GENERATED AN AVERAGE ROAS OF 21.12 FROM FACEBOOK</h5>
                      <div class="d-flex flex-w align-items-center justify-content-between">
                         <button class="btn">Case Study</button>
                         <i class="fa fa-search"></i>
@@ -332,7 +332,7 @@
                   <img src="assets/images/new/Projects/Projects - Hamnet.jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
-                     <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     <h5>175% INCREASE IN THE TOTAL REVENUE GENERATED TO DATE </h5>
                   </div>
                </div>
             </div>
@@ -341,7 +341,7 @@
                   <img src="assets/images/new/Projects/Projects - Mobile App UI .jpg" class="img-fluid">
                   <div class="case-card-text text-start">
                      <h6>Yr Pod, Hertfordshire</h6>
-                     <h5>Generated €70,000 in monthly revenue from facebook</h5>
+                     <h5>41% INCRESE REVENUE FROM FACEBOOK & SEO</h5>
                   </div>
                </div>
             </div>
