--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -125,7 +125,7 @@
                </div>
             </nav>
             <div class="top-header meet-team-top-header p-0">
-               <div class="pages-banner-head-content">
+               <div class="pages-banner-head-content meet-the-team">
                   <div class="bg-black-overlay"></div>
                   <div class="pages-banner-text-box">
                      <div class="container">
