--- a/packages.html
+++ b/packages.html
@@ -123,7 +123,7 @@
                </div>
             </nav>
             <div class="packages-page-head top-header p-0">
-               <div class="pages-banner-head-content">
+               <div class="pages-banner-head-content packages">
                   <div class="bg-black-overlay"></div>
                   <div class="pages-banner-text-box">
                      <div class="container">
