--- a/date-time.html
+++ b/date-time.html
@@ -125,7 +125,7 @@
             </div>
          </nav>
            <div class="top-header meet-team-top-header p-0">
-              <div class="pages-banner-head-content">
+              <div class="pages-banner-head-content date-time">
                  <div class="bg-black-overlay"></div>
                  <div class="pages-banner-text-box">
                     <div class="container">
