--- a/ecommerce-SEO-services-blog.html
+++ b/ecommerce-SEO-services-blog.html
@@ -39,8 +39,10 @@
                             <a class="nav-link" aria-current="page" href="meet-the-team.html">Who&nbsp;Are&nbsp;We</a>
                          </li>
                          <li class="nav-item dropdown">
-                            <a href="what-we-do.html" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                               What&nbsp;we&nbsp;Do <b class="caret"></b></a>
+                            <a href="what-we-do.html" class="dropdown-toggle nav-link d-none d-md-block" data-toggle="dropdown">
+                        What&nbsp;we&nbsp;Do <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle nav-link d-md-none" data-toggle="dropdown">
+                           What&nbsp;we&nbsp;Do <b class="caret"></b></a>
                             <ul class="dropdown-menu multi-level">
                                <li class="dropdown-submenu">
                                   <a href="social-media-marketing.html" class="dropdown-toggle dropdown-item" data-toggle="dropdown">Social Media Advertising</a>
